--- a/styles/main.css
+++ b/styles/main.css
@@ -83,30 +83,42 @@ MAIN
       background-color: #7299FE;
     }
 
-      .about > p {
-        padding: 0 40px;
-        text-align: justify;
-        color: white;
-        font-size: 14px;
-        line-height: 24px;
-      }
-
-      .about > button {
-        margin: 20px 0 0 41px;
-        color: white;
-        border-radius: 20px;
-        padding: 18px 59px;
-        border: none;
-        background-color: #D16FFF;
-      }
-
     /*-----------------
     SKILLS
     -----------------*/
     .skills {
-        background-color: #9122FF;
-        height: 420px;
+      background-color: #9122FF;
+      height: 420px;
     }
+  
+      .skills > .skills_container {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 10px 0 0 64px;
+      }
+
+        .skills > .skills_container > .skill {
+          margin: 0 65px 30px 0;
+        }
+
+          .skills > .skills_container > .skill > h3 {
+            font-size: 18px;
+            color: white;
+          }
+
+          .skills > .skills_container > .skill > div {
+            background-color: white;
+            border-radius: 20px;
+            width: 350px;
+            margin: 14px 0;
+          }
+
+            .skills > .skills_container > .skill > div > .progress-bar {
+              background-color: #57EFF9;
+              border-radius: 20px;
+              padding: 10px;
+              width: 185px;
+            }
 
     /*-----------------
     PORTFOLIO
