--- a/styles/main.css
+++ b/styles/main.css
@@ -7,72 +7,72 @@ GLOBALS
 }
 
 h2 {
-    font-size: 36px;
-    color: white;
-    text-align: center;
-    padding: 28px 0;
+  font-size: 36px;
+  color: white;
+  text-align: center;
+  padding: 28px 0;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;    
-    background-color: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;    
+  background-color: whitesmoke;
 }
 
-    body > div {
-        width: 900px;
-        margin: 0 auto;
-    }
+  body > div {
+    width: 900px;
+    margin: 0 auto;
+  }
 
 img {
-    display: block;
+  display: block;
 }
 
 /*-----------------
 MAIN
 -----------------*/
 
-    /*-----------------
-    HERO
-    -----------------*/
-    .hero {
-      height: 500px;
+  /*-----------------
+  HERO
+  -----------------*/
+  .hero {
+    height: 500px;
+  }
+
+    .hero > figure {
+      position: relative;
+      height: 100%;
     }
 
-      .hero > figure {
-        position: relative;
+      .hero > figure > img {
         height: 100%;
+        width: 100%;
       }
 
-          .hero > figure > img {
-            height: 100%;
-            width: 100%;
-          }
+    .hero > h1 {
+      font-size: 64px;
+      font-weight: bold;
+      color: white;
 
-      .hero > h1 {
-        font-size: 64px;
-        font-weight: bold;
-        color: white;
+      position: absolute;
+      top: 10px;
+      left: 50%;
+      margin-left: -160.08px;
+      z-index: 1;
+    }
 
-        position: absolute;
-        top: 10px;
-        left: 50%;
-        margin-left: -160.08px;
-        z-index: 1;
-      }
+    .hero > div {
+      color: white;
+      position: absolute;
+      padding: 15px;
+      font-size: 25px;
+      top: 255px;
+      left: 300px;
+      z-index: 1;
 
-      .hero > div {
-          color: white;
-          position: absolute;
-          padding: 15px;
-          font-size: 25px;
-          top: 255px;
-          left: 300px;
-          z-index: 1;
-
-          background-color: rgba(114, 153, 254, 0.5);
-          border-radius: 10px;
-      }
+      background-color: rgba(114, 153, 254, 0.5);
+      border-radius: 10px;
+    }
 
     /*-----------------
     ABOUT
@@ -103,22 +103,47 @@ MAIN
     CLIENTS
     -----------------*/
     .clients {
-        background-color: #3F4E62;
-        height: 230px;
+      background-color: #3F4E62;
+      height: 230px;
     }
-
-      .clients > .clients_container {
-        width: 800px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-      }
 
     /*-----------------
     CONTACT
     -----------------*/
     .contact {
-        background-color: #1687A0;
-        height: 500px;
+      background-color: #1687A0;
+      height: 510px;
     }
+
+      .contact > form {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 700px;
+        margin: 0 auto;
+      }
+
+        .contact > form > input {
+          border: 1px solid #BFBFBF;
+          margin-bottom: 25px;
+          padding: 20px 150px 20px 10px;
+        }
+
+        .contact > form > textarea {
+          border: 1px solid #BFBFBF;
+          font-family: Arial, Helvetica, sans-serif;
+          padding: 20px 10px;
+          color: #8B758B;
+        }
+
+        .contact > form > button {
+          margin: 35px auto 0px;
+          padding: 15px 45px;
+          font-size: 18px;
+          text-transform: uppercase;
+          color: white;
+          background-color: #233451;
+          border: none;
+          cursor: pointer;
+        }
+
